--- a/view/adminhtml/web/template/form/element/gallery/image.html
+++ b/view/adminhtml/web/template/form/element/gallery/image.html
@@ -5,8 +5,8 @@
             <input type="checkbox" class="admin__control-checkbox" data-bind="checked: enabled" />
             <span translate="'Enabled'"></span>
         </label>
-        <button type="button" class="action-delete" data-role="delete-button" data-bind="click: $parent.removeImage.bind($parent, $data)">
+   <!--     <button type="button" class="action-delete" data-role="delete-button" data-bind="click: $parent.removeImage.bind($parent, $data)">
             <span translate="'Delete'"></span>
-        </button>
+        </button>-->
     </div>
 </div>
