--- a/view/adminhtml/layout/gardenlawn_mediagallery_index_edit.xml
+++ b/view/adminhtml/layout/gardenlawn_mediagallery_index_edit.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <css src="GardenLawn_MediaGallery::less/_module.less"/>
+    </head>
     <update handle="editor"/>
     <body>
         <referenceContainer name="content">
