--- a/view/adminhtml/layout/gardenlawn_mediagallery_index_index.xml
+++ b/view/adminhtml/layout/gardenlawn_mediagallery_index_index.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <update handle="adminhtml_backend_page"/>
+    <update handle="adminhtml_2columns-left"/>
     <head>
         <css src="GardenLawn_MediaGallery::css/gallery-tiles.css"/>
     </head>
     <body>
+        <referenceContainer name="left">
+            <block class="GardenLawn\MediaGallery\Block\Adminhtml\Gallery\Tree" name="gardenlawn.gallery.tree" template="GardenLawn_MediaGallery::gallery/tree.phtml" />
+        </referenceContainer>
         <referenceContainer name="content">
             <block class="GardenLawn\MediaGallery\Block\Adminhtml\Gallery\Tiles" name="gardenlawn.gallery.tiles" template="GardenLawn_MediaGallery::gallery/tiles.phtml"/>
         </referenceContainer>
