--- a/view/adminhtml/templates/gallery/tree.phtml
+++ b/view/adminhtml/templates/gallery/tree.phtml
@@ -1,5 +1,8 @@
 <?php
-/** @var \GardenLawn\MediaGallery\Block\Adminhtml\Gallery\Tree $block */
+/** @var Tree $block */
+
+use GardenLawn\MediaGallery\Block\Adminhtml\Gallery\Tree;
+
 ?>
 <div class="gallery-tree-container">
     <div id="gallery-tree"></div>
