--- a/view/adminhtml/layout/gardenlawn_mediagallery_index_index.xml
+++ b/view/adminhtml/layout/gardenlawn_mediagallery_index_index.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <update handle="adminhtml_2columns-left"/>
+    <update handle="admin-2columns-left"/>
     <head>
         <css src="GardenLawn_MediaGallery::css/gallery-tiles.css"/>
     </head>
