--- a/view/adminhtml/templates/gallery/tiles.phtml
+++ b/view/adminhtml/templates/gallery/tiles.phtml
@@ -1,5 +1,8 @@
 <?php
-/** @var \GardenLawn\MediaGallery\Block\Adminhtml\Gallery\Tiles $block */
+/** @var Tiles $block */
+
+use GardenLawn\MediaGallery\Block\Adminhtml\Gallery\Tiles;
+
 ?>
 <div id="gallery-tile-component" class="gallery-tiles-container" data-mage-init='{"galleryTileComponent": <?= /* @noEscape */ $block->getJsConfig() ?>}'>
 
