--- a/view/adminhtml/layout/gardenlawn_mediagallery_index_edit.xml
+++ b/view/adminhtml/layout/gardenlawn_mediagallery_index_edit.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <update handle="editor"/>
+    <head>
+        <css src="GardenLawn_MediaGallery::css/gallery-tiles.css"/>
+    </head>
     <body>
         <referenceContainer name="content">
             <uiComponent name="gardenlawn_mediagallery_form"/>
