--- a/view/adminhtml/templates/gallery/tiles.phtml
+++ b/view/adminhtml/templates/gallery/tiles.phtml
@@ -8,7 +8,7 @@ use GardenLawn\MediaGallery\Block\Adminhtml\Gallery\Tiles;
 
     <div class="gallery-toolbar">
         <div class="gallery-search">
-            <label for="gallery-search-input">Search</label><input type="text" id="gallery-search-input" class="admin__control-text" placeholder="<?= $block->escapeHtmlAttr(__('Search by path...')) ?>"/>
+            <input type="text" id="gallery-search-input" class="admin__control-text" placeholder="<?= $block->escapeHtmlAttr(__('Search by path...')) ?>"/>
         </div>
         <div class="gallery-actions">
             <button id="add-new-gallery-button" class="action-primary">
