--- a/view/adminhtml/templates/gallery/assetlink_tiles.phtml
+++ b/view/adminhtml/templates/gallery/assetlink_tiles.phtml
@@ -14,7 +14,7 @@ $galleryId = $block->getCurrentGalleryId();
         <div class="gallery-actions">
             <?php if ($galleryId): ?>
                 <button onclick="location.href = '<?= $block->escapeUrl($block->getAddNewAssetLinkUrl($galleryId)) ?>'" class="action-primary">
-                    <?= $block->escapeHtml(__('Add New Asset Linkkkk')) ?>
+                    <?= $block->escapeHtml(__('Add New Asset Link')) ?>
                 </button>
             <?php endif; ?>
         </div>
